# benchmarkBICGSTAB

./: .gitignore  CMakeLists.txt  Readme.md  generateMatrix.py  plot.py  readMatrix.jl  solveBICGSTAB.jl  solveBICGSTAB.py  timing_Julia.csv  timing_cpp.csv  timing_cpp_Eigen.csv  timing_jax_cpu.csv  timing_jax_gpu.csv
data/: matrixA10.csv  matrixA100.csv  matrixb10.csv  matrixb100.csv  matrixb1000.csv  matrixb2000.csv
src/: main.cpp
